--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "exports-loader": "^0.6.3",
+    "imports-loader": "^0.6.5",
     "vue": "^1.0.20",
-    "vue-router": "^0.7.11"
+    "vue-router": "^0.7.11",
+    "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
