--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "dependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
     "exports-loader": "^0.6.3",
     "imports-loader": "^0.6.5",
-    "vue": "^1.0.20",
-    "vue-router": "^0.7.11",
-    "whatwg-fetch": "^0.11.0"
+    "vue": "^1.0.28",
+    "vue-hot-reload-api": "^1.3.3",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^8.5.4",
+    "vue-router": "^0.7.13",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2",
+    "whatwg-fetch": "^0.11.1"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
