--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "lint": "eslint 'app/**/*.@(js|vue)'"
   },
   "dependencies": {
     "exports-loader": "^0.6.3",
@@ -16,6 +17,10 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^6.18.0",
     "css-loader": "^0.25.0",
+    "eslint": "^3.10.2",
+    "eslint-config-vue": "^2.0.1",
+    "eslint-plugin-vue": "^1.0.0",
+    "pre-commit": "^1.1.3",
     "vue-hot-reload-api": "^2.0.6",
     "vue-html-loader": "^1.2.0",
     "vue-loader": "^9.9.5",
